--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/joy": "^5.0.0-alpha.75",
     "@mui/material": "^5.11.15",
     "axios": "^1.3.4",
     "framer-motion": "^10.10.0",
