--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/joy": "^5.0.0-alpha.75",
     "@mui/material": "^5.11.15",
+    "@types/mui-image": "^1.0.1",
     "axios": "^1.3.4",
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "mui-image": "^1.0.7",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.3.1",
