--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/joy": "^5.0.0-alpha.75",
     "@mui/material": "^5.11.15",
+    "@tanstack/react-query": "^4.28.0",
     "@types/mui-image": "^1.0.1",
     "axios": "^1.3.4",
     "framer-motion": "^10.10.0",
