--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "6.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@savvywombat/tailwindcss-grid-areas": "^3.0.1",
